2008-03-10  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProf.cc (dumpOneProfile): Handles the case a (non-root) 
	frame pointer has zero address.

2008-08-22  Lassi A. Tuura  <lat@iki.fi>

	* IgProfAtomic.h (IgProfAtomicInc, IgProfAtomicDec): Fix return
	value on increment operation.  This does not actually fix a bug
	since igprof only cares about zero/non-zero value (igtrace did
	care).  Update asm constraints to make sure sufficient barriers
	remain in place.

2008-03-12  Lassi A. Tuura  <lat@iki.fi>

	* IgProfMem.cc, IgProfPerf.cc: Truly remove obsolete headers.

2008-03-11  Lassi A. Tuura  <lat@iki.fi>

	* IgProfMem.cc (dofree): Release the memory resource first before
	invoking "free()".  Avoids the situation where the memory is freed
	to the heap and another thread manages to allocate it before the
	current thread manages to record it released.  A similar fix would
	be needed in dorealloc() but it isn't obvious how to apply the fix
	there because of the API definition; calls to realloc() are rare.

	* IgProf.cc: Stop using obsolete OptSymbolAddress.
	(enabled): Add some parentheses for readability.

	* IgProfTrace.cc (acquireResource): Dump more complete stack
	information when a resource conflict has been found.
	* IgProfTrace.h (OptSymbolAddress): Remove unused flag.

	* test/test_load.cc: Run 10 rounds to avoid excessive run time.

2008-03-10  Lassi A. Tuura  <lat@iki.fi>

	* IgProfFileDesc.h, IgProfMem.h, IgProfPerf.h: Remove as obsolete.
	* IgProfFileDesc.cc, IgProfMem.cc, IgProfPerf.cc: Adjust to
	removed headers, those above and IgProfPool.h.

2008-03-06  Lassi A. Tuura  <lat@iki.fi>

	* BuildFile: Remove optimisation kill override.

	* IgProfPerf.cc: Fix SIG_SETMASK logic; this sets the signal mask,
	not the signals allowed, so force the profiling signal out of the
	mask rather than forcing it in.  Improve debug output when signal
	handling overrides take place.

	* IgProf.cc (enabled, enable, disable): Make it more obvious that